# dockflare

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  deploy.sh  pyproject.toml
.github/workflows/: ci.yml
backend/: alembic.ini
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 17cdc9755460_initial_schema.py
backend/app/: config.py  logging_setup.py  main.py
backend/app/api/: deps.py  middleware.py  static.py
backend/app/core/: audit.py  comments.py  db.py  errors.py  labels.py  types.py  vault.py  ws_broker.py
backend/app/models/: __init__.py  audit.py  base.py  cache.py  credential.py  dns.py  drift.py  rotation.py  route.py  settings.py  tunnel.py
backend/app/schemas/: container.py  errors.py  route.py  tunnel.py  zone.py
backend/app/services/: cf_tunnel_cache.py  ingress_builder.py  priority_calculator.py  route_service.py  tunnel_service.py
backend/app/utils/: asyncio_utils.py  redaction.py  strings.py  time.py
backend/tests/: conftest.py
backend/tests/integration/: test_cf_client.py  test_docker_client.py  test_route_service.py  test_tunnel_service.py
backend/tests/unit/: test_cf_tunnel_cache.py  (+6 more)
docker/: Dockerfile  Dockerfile.dev  Dockerfile.frontend  compose.dev.yml  compose.yml  entrypoint.sh  frontend-entrypoint.sh  nginx.conf
docs/design/: 01-architecture.md  02-data-model.md  03-cloudflare-integration.md  04-docker-integration.md  05-api-specification.md  06-rotation-engine.md  07-reconciliation.md  08-security.md  09-frontend-spec.md  10-deployment.md  11-implementation-plan.md  12-project-structure.md  13-testing-strategy.md  14-claude-code-guide.md  README.md
frontend/: .eslintrc.cjs  index.html  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
scripts/: discover.py  setup.sh  test_cf_live.py
(+16 files in other folders)
