[project]
name = "dockflare"
version = "0.1.0"
description = "Self-hosted management plane for Cloudflare Tunnels and Docker"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "alembic>=1.13",
    "aiosqlite>=0.20",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "docker>=7.1",
    "cryptography>=43",
    "apscheduler>=3.10",
    "tenacity>=9",
    "structlog>=24",
    "argon2-cffi>=23",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "vcrpy>=6",
    "testcontainers>=4",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "S"]
ignore = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
mypy_path = "backend"

[[tool.mypy.overrides]]
module = ["docker.*", "apscheduler.*", "vcrpy.*", "testcontainers.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "app.clients.cloudflare.*",
    "app.clients.docker.*",
    "app.services.*",
]
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_calls = false
disable_error_code = ["arg-type", "attr-defined"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
markers = [
    "system: tests requiring real Docker daemon",
    "benchmark: performance benchmarks",
]
